fixed text alignment

--- a/projects/book-blog/styles/styles.css
+++ b/projects/book-blog/styles/styles.css
@@ -73,6 +73,7 @@ header h1 {
     font-size: 0.95em;
     padding-right: 20px;
     border-right: 1px solid #ccc;
+    text-align: right;
 }
 
 .aboutContainer h4 {
